--- a/backups/4_4_2021/index - Copy.html
+++ b/backups/4_4_2021/index - Copy.html
@@ -27,10 +27,10 @@
       </button>
       <nav class="dropdown-content" style="font-family: Verdana, Geneva, Tahoma, sans-serif; border-radius: 5px;">
         <a href="#welcome-section" style="text-decoration: none;">Contact Info</a>
+        <a href="#certifications" style="text-decoration: none;">Certifications</a>
         <a href="#personal-projects" style="text-decoration: none;">My Projects</a>
         <a href="#projects" style="text-decoration: none;">Web&nbsp;Development</a>
         <a href="#autocad" style="text-decoration: none;">Archibus&nbsp;|&nbsp;CAD&nbsp;|&nbsp;Other</a>
-        <a href="#certifications" style="text-decoration: none;">Certifications</a>
         <a href="#about" style="text-decoration: none;">About Me</a>
       </nav>
     </nav>
@@ -52,25 +52,29 @@
         </h4>
       <div>
         <br /><br />
-        <h3>Let's work together!</h3>
+        <h3>Let's work together, check out my contact info buttons below!</h3>
       </div>
       <br /><br />
       <div id="contact-buttons"> 
 <!--round white buttons: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_social_media_buttons2-->
         <a class="btn contactIcon iconHover" href="workFiles/Connor_Readnour_Resume_Port.pdf" target="_blank"> 
-          <i class="fa fa-file-text" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="My Resume" 
+          <p>Resume</p>
+          <i class="fa fa-file-text" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to open a pdf of my resume" 
           style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
         </a>
         <a class="btn contactIcon iconHover" href="https://www.linkedin.com/in/connorreadnour/" target="_blank">
-          <i class="fa fa-linkedin" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="LinkedIn profile" 
+          <p>LinkedIn</p>
+          <i class="fa fa-linkedin" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to open my LinkedIn profile" 
           style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
         </a>
         <a class="btn contactIcon iconHover" href="mailto:connorreadnour@gmail.com" target="_blank">
-          <i class="fa fa-envelope" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Email"
+          <p>Email</p>
+          <i class="fa fa-envelope" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to send me an email @ connorreadnour@gmail.com"
           style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
         </a>
         <a class="btn contactIcon iconHover" href="tel:630-639-6677" target="_blank">
-          <i class="fa fa-phone" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Phone"
+          <p>Phone</p>
+          <i class="fa fa-phone" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to call my phone number (630-639-6677)"
           style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
         </a>
         <!-- <a class="btn contactIcon iconHover" href="https://www.freecodecamp.org/masterchief1021" target="_blank">
@@ -82,11 +86,51 @@
   <br />
   </section>
   <br /><br /><br /><br /><br /><br />
-  <!--Start of personal Projects -->
+  <!--Start of certifications section ---------------------------------------------------------------------------->
+  <section class="wrapper">
+    <h1 id="certifications" class="myGalleries">My Certifications</h1>
+    <div class="img-area">
+      <!--W3Schools-->
+      <div class="single-img cards project-cards border-aqua">
+        <img alt="W3Schools JavaScript Fundamentals" class="project-image img-thumbnail single-img"
+          src="img/certs/w3schools.PNG" style="height:150px; width: 260px;">
+        <a href="img/certs/w3schools.PNG" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">W3Schools JavaScript Fundamentals</p>
+      </div>
+      <!--freeCodeCamp JavaScript-->
+      <div class="single-img cards project-cards border-aqua">
+        <img alt="freeCodeCamp JavaScript Algorithms and Data Structures" class="project-image img-thumbnail  single-img"
+          src="img/certs/fCCJavaScript.PNG" style="height:150px; width: 260px;">
+        <a href="img/certs/fCCJavaScript.PNG" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">freeCodeCamp JavaScript Algorithms and Data Structures</p>
+      </div>
+      <!--freeCodeCamp Responsive Web Design-->
+      <div class="single-img cards project-cards border-aqua">
+        <img alt="freeCodeCamp Responsive Web Design" class="project-image img-thumbnail single-img"
+          src="img/certs/fCCResponsiveWebDesign.PNG" style="height:150px; width: 260px;">
+        <a href="img/certs/fCCResponsiveWebDesign.PNG" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">freeCodeCamp Responsive Web Design</p>
+      </div>
+    </div>
+    <br /><br /><br /><br /><br /><br />
+  </section>
+  <!--end of certifications section ---------------------------------------------------------------------------->
+  <!--Start of Projects card section ----------------------------------------------------------------------------------------->
   <section class="center">
     <h1 id="personal-projects" class="center myGalleries">My Projects</h1>
     <div class="img-area">
-      <!--start of project cards-->
       <!--React recipe list-->
       <div class="single-img cards project-cards">
         <img alt="react" class="project-image img-thumbnail single-img" src="img/reactRecipes.PNG"
@@ -729,47 +773,6 @@
     <br /><br /><br /><br /><br /><br />
   </section>
   <!--end of archibus / other / cad section ---------------------------------------------------------------------------->
-    <!--Start of certifications section ---------------------------------------------------------------------------->
-    <section class="wrapper">
-      <h1 id="certifications" class="myGalleries">My Certifications</h1>
-      <div class="img-area">
-        <!--W3Schools-->
-        <div class="single-img cards project-cards border-aqua">
-          <img alt="W3Schools JavaScript Fundamentals" class="project-image img-thumbnail single-img"
-              src="img/certs/w3schools.PNG" style="height:150px; width: 260px;">
-          <a href="img/certs/w3schools.PNG" target="_blank">
-            <p class="card-btn">
-              <span class="btn btn-success btn-sm zoom">View</span>
-            </p>
-          </a>
-          <p class="color-black">W3Schools JavaScript Fundamentals</p>
-        </div>
-        <!--freeCodeCamp JavaScript-->
-        <div class="single-img cards project-cards border-aqua">
-          <img alt="freeCodeCamp JavaScript Algorithms and Data Structures" class="project-image img-thumbnail  single-img"
-              src="img/certs/fCCJavaScript.PNG" style="height:150px; width: 260px;">
-          <a href="img/certs/fCCJavaScript.PNG" target="_blank">
-            <p class="card-btn">
-              <span class="btn btn-success btn-sm zoom">View</span>
-            </p>
-          </a>
-          <p class="color-black">freeCodeCamp JavaScript Algorithms and Data Structures</p>
-        </div>
-        <!--freeCodeCamp Responsive Web Design-->
-        <div class="single-img cards project-cards border-aqua">
-          <img alt="freeCodeCamp Responsive Web Design" class="project-image img-thumbnail single-img" 
-              src="img/certs/fCCResponsiveWebDesign.PNG" style="height:150px; width: 260px;">
-          <a href="img/certs/fCCResponsiveWebDesign.PNG" target="_blank">
-            <p class="card-btn">
-              <span class="btn btn-success btn-sm zoom">View</span>
-            </p>
-          </a>
-          <p class="color-black">freeCodeCamp Responsive Web Design</p>
-        </div>
-      </div>
-      <br /><br /><br /><br /><br /><br />
-    </section>
-    <!--end of certifications section ---------------------------------------------------------------------------->
   <!--start of about section ---------------------------------------------------------------------------->
   <section id="about">
     <div class="wrapper">
