--- a/index - copy.html
+++ b/index - copy.html
@@ -26,7 +26,7 @@
         <i class="fa fa-caret-square-o-down fa-3x opacity-6" aria-hidden="true" data-toggle="tooltip"></i>
       </button>
       <nav class="dropdown-content" style="font-family: Verdana, Geneva, Tahoma, sans-serif; border-radius: 5px;">
-        <a href="#welcome-section" style="text-decoration: none;">Contact Info</a>
+        <!--<a href="#welcome-section" style="text-decoration: none;">Contact Info</a>-->
         <a href="#about" style="text-decoration: none;">About Me</a>
         <a href="#certifications" style="text-decoration: none;">Certifications</a>
         <a href="#personal-projects" style="text-decoration: none;">My Projects</a>
@@ -50,46 +50,9 @@
             data-type='[ "Marketing QA Analyst III @ Robert Half" ]'></p>
           <span class="wrap"></span>
         </h4>
-      <div>
-        <br /><br />
-        <h3>Let's work together, check out my contact info buttons below!</h3>
-      </div>
-      <br /><br />
-      <div id="contact-buttons"> 
-<!--round white buttons: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_social_media_buttons2-->
-        <a class="btn contactIcon iconHover" href="workFiles/Connor_Readnour_Resume.pdf" target="_blank"> 
-          <p>Resume</p>
-          <i class="fa fa-file-text" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to open a pdf of my resume" 
-          style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
-        </a>
-        <a class="btn contactIcon iconHover" href="https://www.linkedin.com/in/connorreadnour/" target="_blank">
-          <p>LinkedIn</p>
-          <i class="fa fa-linkedin" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to open my LinkedIn profile" 
-          style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
-        </a>
-        <!--
-        <a class="btn contactIcon iconHover" href="mailto:connorreadnour@gmail.com" target="_blank">
-          <p>Email</p>
-          <i class="fa fa-envelope" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to send me an email @ connorreadnour@gmail.com"
-          style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
-        </a>
-        -->
-        <!--
-        <a class="btn contactIcon iconHover" href="tel:630-639-6677" target="_blank">
-          <p>Phone</p>
-          <i class="fa fa-phone" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to call my phone number (630-639-6677)"
-          style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
-        </a>
-        -->
-        <!-- <a class="btn contactIcon iconHover" href="https://www.freecodecamp.org/masterchief1021" target="_blank">
-          <i class="fa fa-free-code-camp" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="freeCodeCamp Certifications"
-            style="padding-top: 20px; font-size: 40px; height: 2em; ; width: 2em; border-radius: 50%; background: white; color: black;"></i>
-        </a> -->
-      </div>
     </div>
   <br />
   </section>
-  <br /><br /><br /><br />
   
   <!--start of about section ---------------------------------------------------------------------------->
   <section id="about">
@@ -98,26 +61,36 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        I am a seasoned Marketing QA Analyst III with over 8 years of experience collaborating with dynamic and diverse teams. My expertise spans across a wide array of software and programming languages, including: 
-        Salesforce Marketing Cloud, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, Lucidchart, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.   
+        Salesforce Certified Professional who's work experience encompasses a diverse range of software and programming languages, including, but not limited to: Salesforce Marketing Cloud, Journey QA, Automation QA, Email QA, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
       </h4>
     </div>
     <br />
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <i class="fa fa-leanpub fa-lg  iAbout" aria-hidden="true"></i>&nbsp;
       <h4 class="text-area about-h4">
-        Fueling my passion for continuous growth, I thrive on learning and sharing my knowledge with others. Each day I embrace the opportunity to uncover new and intriguing insights, always striving to better myself. 
-        My aspiration is to become a subject matter expertthat can adeptly impart that expertise to others through comprehensive workflow documentation and engaging training videos.
+        Fueling my passion for continuous growth, I thrive on learning and sharing my knowledge with others. Each day I embrace the opportunity to uncover new and intriguing insights, always striving to better myself. My aspiration is to become a subject matter expert that can impart that expertise to others through comprehensive workflow documentation and engaging training videos.   
       </h4>
     </div>
+    -->
     <br />
   </section>
   <!-- end about section-->
   
   <!--Start of certifications section ---------------------------------------------------------------------------->
   <section class="wrapper">
-    <h1 id="certifications" class="myGalleries">My Certifications</h1>
+    <h1 id="certifications" class="myGalleries">Certifications</h1>
     <div class="img-area">
+      <!--Salesforce Certified Marketing Associate-->
+      <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
+        <img alt="Salesforce Certified Marketing Associate" class="project-image img-thumbnail single-img"
+          src="img/certs/marketingAssociate.png" style="height:150px; width: 250px;"><!--250px wide 160height-->
+        <a href="img/certs/marketingAssociate.png" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">Salesforce Certified Marketing Associate</p>
+      </div>
       <!--MTA Microsoft DB Fundamentals-->
       <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
         <img alt="MTA Microsoft DB Fundamentals" class="project-image img-thumbnail single-img"
@@ -814,6 +787,49 @@
   </section>
   <!--end of archibus / other / cad section ---------------------------------------------------------------------------->
 
+ 
+        <!-- contact info buttons -->
+  <!--
+      <div>
+        <br /><br />
+        <h3>Let's work together, check out my contact info buttons below!</h3>
+      </div>
+      <br /><br />
+      <div id="contact-buttons"> 
+  -->
+<!--round white buttons: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_social_media_buttons2-->
+        <!--
+        <a class="btn contactIcon iconHover" href="workFiles/Connor_Readnour_Resume.pdf" target="_blank"> 
+          <p>Resume</p>
+          <i class="fa fa-file-text" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to open a pdf of my resume" 
+          style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
+        </a>
+        -->
+  <!--
+        <a class="btn contactIcon iconHover" href="https://www.linkedin.com/in/connorreadnour/" target="_blank">
+          <p>LinkedIn</p>
+          <i class="fa fa-linkedin" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to open my LinkedIn profile" 
+          style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
+        </a>
+        <a class="btn contactIcon iconHover" href="mailto:connorreadnour@gmail.com" target="_blank">
+          <p>Email</p>
+          <i class="fa fa-envelope" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to send me an email @ connorreadnour@gmail.com"
+          style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
+        </a>
+        <!--
+        <a class="btn contactIcon iconHover" href="tel:630-639-6677" target="_blank">
+          <p>Phone</p>
+          <i class="fa fa-phone" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Click to call my phone number (630-639-6677)"
+          style="padding: 20px; font-size: 40px; width: 2em; border-radius: 50%; background: white; color: black;"></i>
+        </a>
+        -->
+        <!-- <a class="btn contactIcon iconHover" href="https://www.freecodecamp.org/masterchief1021" target="_blank">
+          <i class="fa fa-free-code-camp" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="freeCodeCamp Certifications"
+            style="padding-top: 20px; font-size: 40px; height: 2em; ; width: 2em; border-radius: 50%; background: white; color: black;"></i>
+        </a> -->
+        <!-- end contact info buttons section-->
+
+        
   <br /><br /><br /><br /><br /><br />
   <footer class="text-center" style="width: 100%;">
     <p>
