--- a/index - copy.html
+++ b/index - copy.html
@@ -28,10 +28,10 @@
       <nav class="dropdown-content" style="font-family: Verdana, Geneva, Tahoma, sans-serif; border-radius: 5px;">
         <!--<a href="#welcome-section" style="text-decoration: none;">Contact Info</a>-->
         <a href="#about" style="text-decoration: none;">About Me</a>
-        <a href="#certifications" style="text-decoration: none;">Certifications</a>
-        <a href="#personal-projects" style="text-decoration: none;">My Projects</a>
-        <a href="#projects" style="text-decoration: none;">Web&nbsp;Development</a>
-        <a href="#autocad" style="text-decoration: none;">Other</a>
+        <a href="#certifications" style="text-decoration: none;">My Certifications</a>
+        <a href="#personal-projects" style="text-decoration: none;">Personal Projects</a>
+        <a href="#projects" style="text-decoration: none;">Web&nbsp;Dev</a>
+        <a href="#autocad" style="text-decoration: none;">Other Work</a>
       </nav>
     </nav>
     <!--/. end Navbar-->
@@ -61,7 +61,7 @@
       <i class="fa fa-rocket fa-lg iAbout" aria-hidden="true" aria-hidden="true"></i>&nbsp;
       <!--     https://fontawesome.com/v4.7.0/icons/       -->
       <h4 class="text-area about-h4">
-        Salesforce Certified Professional with work experience that encompasses a diverse range of software and programming languages, such as: Salesforce Marketing Cloud, Journey QA, Automation QA, Email QA, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
+        ISTQB Certified Tester and 2x Salesforce Certified Professional with over a decade of work experience that encompasses a diverse range of software and programming languages, such as: Salesforce Marketing Cloud, Journey QA, Automation QA, Email QA, AMPscript, SQL Queries, SQL Server, HTML5, CSS3, Bootstrap, Jira, SharePoint, MS Excel, Word, PowerPoint, Archibus IWMS, and AutoCAD.
       </h4>
     </div>
     <br />
@@ -80,6 +80,17 @@
   <section class="wrapper">
     <h1 id="certifications" class="myGalleries">Certifications</h1>
     <div class="img-area">
+      <!--ISTQB Certified Tester-->
+      <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
+        <img alt="Salesforce Certified Marketing Associate" class="project-image img-thumbnail single-img"
+          src="img/certs/ISTQB Cert.png" style="height:150px; width: 250px;"><!--250px wide 160height-->
+        <a href="img/certs/ISTQB Cert.png" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">ISTQB Certified Tester</p>
+      </div>
       <!--Salesforce Certified AI Associate-->
       <div class="single-img cards project-cards border-cert"><!--orig is 600 x 600-->
         <img alt="Salesforce Certified Marketing Associate" class="project-image img-thumbnail single-img"
@@ -153,7 +164,7 @@
   <!--end of certifications section ---------------------------------------------------------------------------->
   <!--Start of Projects card section ----------------------------------------------------------------------------------------->
   <section class="center">
-    <h1 id="personal-projects" class="center myGalleries">My Projects</h1>
+    <h1 id="personal-projects" class="center myGalleries">Personal Projects</h1>
     <div class="img-area">
       <!--Power BI 1-->
       <div class="single-img cards project-cards">
