--- a/index - copy.html
+++ b/index - copy.html
@@ -246,7 +246,7 @@
       </div>
       <!-- end example website-->
       <!--React recipe list-->
-      <div class="single-img cards project-cards">
+      <!-- <div class="single-img cards project-cards">
         <img alt="react" class="project-image img-thumbnail single-img" src="img/reactRecipes.PNG"
           style="height:150px; width: 260px;">
         <a href="https://react-recipe-app-1.netlify.app/" target="_blank">
@@ -264,8 +264,10 @@
         </a>
         <p class="color-black">React Recipe List</p>
       </div>
+      -->
       <!-- end react recipe list-->
       <!--React todo list-->
+      <!--
       <div class="single-img cards project-cards">
         <img alt="react" class="project-image img-thumbnail single-img" src="img/reactTaskTracker.PNG"
           style="height:150px; width: 260px;">
@@ -284,6 +286,7 @@
         </a>
         <p class="color-black">React To-Do List</p>
       </div>
+      -->
       <!-- end react to do list-->
       <!--React menu app-->
       <div class="single-img cards project-cards">
